# ResearchPapers

./: db.sqlite3  fetch_papers_cli.py  filtered_papers.csv  manage.py  papers.csv  papers_data.csv  pyproject.toml
research_paper/: asgi.py  settings.py  urls.py  wsgi.py
researchpaper/: apps.py  fetcher.py  serializers.py  urls.py  views.py
